# custos

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
config/: confidence_weights.toml  guardrails.toml  models.toml
src/custos/: pipeline.py
src/custos/core/: config.py  logging.py
src/custos/evaluation/: back_translator.py  confidence.py  multi_query.py  sanity_checker.py
src/custos/execution/: sandbox.py
src/custos/generation/: generator.py  models.py
src/custos/guardrails/: middleware.py  rules.py
src/custos/prompt/: ambiguity.py  constructor.py
src/custos/schema/: embeddings.py  filter.py  introspection.py  models.py
