[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custos"
version = "0.1.0"
description = "Text-to-SQL with guardrails and hallucination detection"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # LLM Inference — Groq API (OpenAI-compatible)
    "groq>=0.9.0",

    # Structured output from LLMs
    "instructor>=1.0.0",

    # Database
    "duckdb>=1.0.0",
    "sqlalchemy>=2.0.0",
    "duckdb-engine>=0.13.0",          # SQLAlchemy dialect for DuckDB

    # SQL Parsing & Validation (AST-level guardrails)
    "sqlglot>=23.0.0",

    # Embeddings (local, no hosted API)
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",                    # Required by sentence-transformers

    # Vector Store (local, embedded)
    "chromadb>=0.5.0",

    # API Layer
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",

    # Frontend
    "streamlit>=1.35.0",

    # Caching (rate-limit protection)
    "diskcache>=5.6.0",

    # Config file parsing
    "tomllib>=2.0.1; python_version < '3.11'",  # stdlib in 3.11+

    # Environment variable loading
    "python-dotenv>=1.0.0",

    # Structured logging
    "structlog>=24.0.0",

    # HTTP client (for async Groq calls in Phase 4)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",                   # Async test client for FastAPI
    "respx>=0.21.0",                   # HTTP mocking for tests
    "ruff>=0.4.0",                     # Linting + formatting
    "mypy>=1.10.0",                    # Type checking
]

[tool.hatch.build.targets.wheel]
packages = ["src/custos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "UP", "S", "B"]
ignore = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
